--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 							<header>
 								<h1>Hi. We are <strong>Group Name</strong>.</h1>
 							</header>
-							<p>And this is our project, <strong>Project Title</strong>, <em>a short explanation of the project objectives</em>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+							<p>And this is our project, <strong>FAJ</strong>, <em>an investigation of mis/disinformation about the EDSA Revolution </em>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 							<p>Data Science Team</p>
 							<ul style="list-style-type:none; margin-top:-30px;">
-							  <li>Student's name, section</li>
-							  <li>Student's name, section</li>
-							  <li>Student's name, section</li>
+							  <li>Vincent Angelo Dispo, WFX</li>
+							  <li>Kristina Cassandra Castañeda, WFX</li>
+							  <li>Loridge Anne Gacho, WFX</li>
 							</ul>
 						</div>
 					</div>
@@ -53,28 +53,28 @@
 				<div class="container">
 					<header>
 						<h2>Here's an overview of our project.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<p>The scope of our project is as seen below.</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
 								<h3>Motivation</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<p>With the sudden rise of mis/disinformation about many different topics, we have also seen a rise in claims questioning the validity and legitimacy of an event in our history that freed us from a dictator.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>Problem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<p>We strive to investigate if there has been an observed rise in EDSA Revolution dis/misinformation during the 2022 election period.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Solution</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Action Plan</h3>
+								<p>To examine the frequency and posting times of tweets that spread false information about the EDSA Revolution.</p>
 							</section>
 						</div>
 					</div>
