--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<ul class="container">
 					<li><a href="#top">Top</a></li>
 					<li><a href="#overview">Overview</a></li>
-					<li><a href="#problem">Overview</a></li>
+					<li><a href="#problem">Problem Formulation</a></li>
 					<li><a href="#data">Data</a></li>
 					<li><a href="#methods">Methods</a></li>
 					<li><a href="#results">Results</a></li>
@@ -86,33 +86,36 @@
 				</div>
 			</article>
 		
-		<!-- Overview -->
+		<!-- Problem Formulation -->
 			<article id="problem" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's an overview of our project.</h2>
-						<p>The scope of our project is as seen below.</p>
+						<h2>Problem Formulation</h2>
+						<p>The research problem and hypothesis are as shown below.</p>
 					</header>
 					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-12">
 							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Motivation</h3>
-								<p>With the sudden rise of mis/disinformation about many different topics, we have also seen a rise in claims questioning the validity and legitimacy of an event in our history that freed us from a dictator.</p>
+								<h3>Research Problem</h3>
+								<p>Is there an observed rise in EDSA Revolution dis/misinformation during the 2022 election period?</p>
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-12">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Problem</h3>
-								<p>We strive to investigate if there has been an observed rise in EDSA Revolution dis/misinformation during the 2022 election period.</p>
+								<h3>Hypothesis</h3>
+								<p>A rise in EDSA Revolution dis/misinformation during the 2022 election period is observed.</p>
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-12">
 							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
+								<h3>Null Hypothesis</h3>
+								<p>A rise in EDSA Revolution dis/misinformation during the 2022 election period is not observed or not significant.</p>
+							</section>
+						</div>
+						<div class="col-12">
+							<section class="box style1">
 								<h3>Action Plan</h3>
-								<p>To examine the frequency and posting times of tweets that spread false information about the EDSA Revolution.</p>
+								<p>Examine the frequency and posting times of tweets that spread false information about the EDSA Revolution.</p>
 							</section>
 						</div>
 					</div>
