--- a/index.html
+++ b/index.html
@@ -54,28 +54,27 @@
 				<div class="container">
 					<header>
 						<h2>Here's an overview of our project.</h2>
-						<p>The scope of our project is as seen below.</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
 								<h3>Motivation</h3>
-								<p>With the sudden rise of mis/disinformation about many different topics, we have also seen a rise in claims questioning the validity and legitimacy of an event in our history that freed us from a dictator.</p>
+								<p></p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>Problem</h3>
-								<p>We strive to investigate if there has been an observed rise in EDSA Revolution dis/misinformation during the 2022 election period.</p>
+								<p></p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Action Plan</h3>
-								<p>To examine the frequency and posting times of tweets that spread false information about the EDSA Revolution.</p>
+								<h3>Solution</h3>
+								<p></p>
 							</section>
 						</div>
 					</div>
@@ -87,7 +86,7 @@
 			</article>
 		
 		<!-- Problem Formulation -->
-			<article id="problem" class="wrapper style2">
+			<article id="problem" class="wrapper style1">
 				<div class="container">
 					<header>
 						<h2>Problem Formulation</h2>
@@ -127,7 +126,7 @@
 			</article>
 
 		<!-- Data -->
-			<article id="data" class="wrapper style3">
+			<article id="data" class="wrapper style2">
 				<div class="container">
 					<header>
 						<h2>We mined the internet for fake news data.</h2>
@@ -163,7 +162,7 @@
 			</article>
 
 			<!-- Methods -->
-			<article id="methods" class="wrapper style3">
+			<article id="methods" class="wrapper style1">
 				<div class="container">
 					<header>
 						<h2>Let's talk about our data science methodology.</h2>
@@ -206,7 +205,7 @@
 			</article>
 
 			<!-- Results -->
-			<article id="results" class="wrapper style3">
+			<article id="results" class="wrapper style2">
 				<div class="container">
 					<header>
 						<h2>Here's what we found out.</h2>
