--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. We are <strong>Group Name</strong>.</h1>
+								<h1>Hi. We are <strong>Group 37</strong>.</h1>
 							</header>
-							<p>And this is our project, <strong>FAJ</strong>, <em>an investigation of mis/disinformation about the EDSA Revolution </em>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+							<p>And this is our project, <strong>An Analysis on the Supposed Rise in EDSA Revolution dis/misinformation during the 2022 election period</strong>. As data science students from the University of the Philippines, we aim to gather pertinent data about the allegations involving the EDSA revolution from tweets spanning from 2016-2022. Using these data and our knowledge in machine learning, we hope to make an analysis that can help elucidate the situation about the rampant spread of mis/disinformation on Twitter.</p>
 							<p>Data Science Team</p>
 							<ul style="list-style-type:none; margin-top:-30px;">
 							  <li>Vincent Angelo Dispo, WFX</li>
@@ -60,14 +60,14 @@
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
 								<h3>Motivation</h3>
-								<p></p>
+								<p>In light of the recent change in the EDSA holiday's date, we are interested in knowing how people perceive the historical significance of the EDSA revolution and how the rise of mis/disinformation has affected the amount of skepticism about its legitimacy and validity.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>Problem</h3>
-								<p></p>
+								<p>As social media platforms become much accessible to the mass people, it has become a means for some people to distribute wrong information for their own benefit or sometimes they are just misinformed too. This has caused a rise in misinformation and disinformation regarding many fields including medicine, politics, and even history itself.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -84,7 +84,7 @@
 					</footer>
 				</div>
 			</article>
-		
+
 		<!-- Problem Formulation -->
 			<article id="problem" class="wrapper style1">
 				<div class="container">
