--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<p>And this is our project, <strong>An Analysis on the Supposed Rise in EDSA Revolution dis/misinformation during the 2022 election period</strong>. As data science students from the University of the Philippines, we aim to gather pertinent data about the allegations involving the EDSA revolution from tweets spanning from 2016-2022. Using these data and our knowledge in machine learning, we hope to make an analysis that can help elucidate the situation about the rampant spread of mis/disinformation on Twitter.</p>
 							<p>Data Science Team</p>
 							<ul style="list-style-type:none; margin-top:-30px;">
-							  <li>Vincent Angelo Dispo, WFX</li>
+							  <li>Vincent Angelo Dispo, WFU</li>
 							  <li>Kristina Cassandra Castañeda, WFX</li>
 							  <li>Loridge Anne Gacho, WFX</li>
 							</ul>
@@ -112,8 +112,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">Let's take a look at our data</a>
+						<a href="#data" class="button large scrolly">Let's take a look at our data</a>
 					</footer>
 				</div>
 			</article>
@@ -123,28 +122,39 @@
 				<div class="container">
 					<header>
 						<h2>We mined the internet for fake news data.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<p>After the formulation of our topic, we scoured through Twitter to look for tweets containing mis/disinformation</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Topic</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3>Mode of Collection</h3>
+								<p>We collected our data manually by using Twitter's advanced search and manually encoding data to our dataset</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Keywords</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3>Dates of Collection</h3>
+								<p>We collected tweets on two batches. The first batch or the first 100 tweets are collected on March 22-30, 2023, while the second batch was collected on April 18, 2023.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Tools</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3>Data Selection Criteria</h3>
+								<p>Our collection criterias include ...</p>
+							</article>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<h3>Sample Size Collected</h3>
+								<p>We collected a total of 150 sample tweets.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<h3>Data Features</h3>
+								<p>The columns contained in our dataset are the following:</p>
 							</article>
 						</div>
 					</div>
