Updated website and dataset

--- a/index.html
+++ b/index.html
@@ -118,48 +118,46 @@
 			</article>
 
 		<!-- Data -->
-			<article id="data" class="wrapper style2">
+			<article id="Data Collection" class="wrapper style2">
 				<div class="container">
 					<header>
 						<h2>We mined the internet for fake news data.</h2>
 						<p>After the formulation of our topic, we scoured through Twitter to look for tweets containing mis/disinformation</p>
 					</header>
-					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
+					<div class="row aln-center">
+						<div class="col-12">
+							<section class="box style1">
 								<h3>Mode of Collection</h3>
-								<p>We collected our data manually by using Twitter's advanced search and manually encoding data to our dataset</p>
-							</article>
+								<p>We collected our data manually by using Twitter's advanced search and browsing through all tweets looking for potential mis/disinformation. After collecting all these suspected tweets, we manually picked out those tweets that really give mis/disinformation, we then manually encoded the tweet data to our dataset one by one.</p>
+							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
+						<div class="col-12">
+							<section class="box style1">
 								<h3>Dates of Collection</h3>
-								<p>We collected tweets on two batches. The first batch or the first 100 tweets are collected on March 22-30, 2023, while the second batch was collected on April 18, 2023.</p>
-							</article>
+								<p>We collected tweets on two batches. The first batch or the first 100 tweets are collected from March 22 to March 30 of the year 2023. The second batch on the other hand, was all collected on April 18, 2023.</p>
+							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
+						<div class="col-12">
+							<section class="box style1">
 								<h3>Data Selection Criteria</h3>
 								<p>Our collection criterias include ...</p>
-							</article>
+							</section>
 						</div>
-					</div>
-					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
+						<div class="col-12">
+							<section class="box style1">
 								<h3>Sample Size Collected</h3>
 								<p>We collected a total of 150 sample tweets.</p>
-							</article>
+							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
+						<div class="col-12">
+							<section class="box style1">
 								<h3>Data Features</h3>
 								<p>The columns contained in our dataset are the following:</p>
-							</article>
+							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<a href="#data" class="button large scrolly">Let's take a look at our data</a>
 					</footer>
 				</div>
 			</article>
