--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				<div class="container">
 					<header>
 						<h2>Let's talk about our data science methodology.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<p><script src="https://gist.github.com/VDispo/5169585002c9d0c3ce3521d55e1ab9cb.js"></script></p>
 					</header>
 					<div class="row">
 						<div class="col-6 col-6-medium col-12-small">
