--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 					<div class="row">
 						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/peakdetection.png" alt="" /></a>
 								<h3><a href="#">Results</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
