--- a/index.html
+++ b/index.html
@@ -263,14 +263,21 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 					<div class="row">
 						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/peakdetection.png" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/peakdetection1.png" alt="" /></a>
 								<h3><a href="#">Results</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/changepdetection.png" alt="" /></a>
+								<h3><a href="#">Results</a></h3>
+								<p>Ornare nulla proin odio consequat.</p>
+							</article>
+						</div>
+						<div class="col-6 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="images/linearregression.png" alt="" /></a>
 								<h3><a href="#">Results</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
