--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/peakdetection1.png" alt="" /></a>
 								<h3><a href="#">Results</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<p>Time Series analysis examines a series of data points over a period time. In this study, we examine data from 2016-2022. The figure below highlights the peaks observed in our data.</p>
 							</article>
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
