--- a/index.html
+++ b/index.html
@@ -298,6 +298,31 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 					<header>
 						<h2>We'd like to hear from you.</h2>
 						<p>You can add more information about the team members here.</p>
+						<div class="row">
+							<div class="col-6 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="images/peakdetection1.png" alt="" /></a>
+									<h3><a href="#">Peak Detection</a></h3>
+									<p>Time Series analysis examines a series of data points over a period time. In this study, we examine data from 2016-2022. The figure above highlights the peaks observed in our data.</p>
+								</article>
+							</div>
+							<div class="col-6 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="images/changepdetection.png" alt="" /></a>
+									<h3><a href="#">Change Point Detection</a></h3>
+									<p>Ornare nulla proin odio consequat.</p>
+								</article>
+							</div>
+							<div class="col-6 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="images/linearregression.png" alt="" /></a>
+									<h3><a href="#">Linear Regression</a></h3>
+									<p>The graph above shows the result of our segmented linear regression with respect to the number of tweets. The data is segmented for actual tweets regarding EDSA misinformation (1) before Bongbong Marcos declared his candidacy (blue scatter plots) and the (2) time period after announcing his candidacy up to the day of the election (purple scatter plots). LR1 is the predicted linear regression for time period 1 and LR2 is the predicted linear regression for time period 2.<br />
+									 <br />
+									The statistical model used is t-test between the linear predictor values to test for a significant change in the number of tweets between the said period. T-test is also used on the mean number of tweets on the said periods to test whether there is a significant rise to the tweets. Both of these tests saw a significant rise on the number of tweets between time periods.</p>
+								</article>
+							</div>
+						</div>
 					</header>
 					<div class="row">
 						<div class="col-12">
