--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 					<header>
 						<h2>We'd like to hear from you.</h2>
 						<p>You can add more information about the team members here.</p>
-						<div class="row">
+						<div class="row aln-center">
 							<div class="col-6 col-6-medium col-12-small">
 								<article class="box style2">
 									<a href="#" class="image featured"><img src="images/peakdetection1.png" alt="" /></a>
