--- a/index.html
+++ b/index.html
@@ -261,21 +261,21 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
 					</header>
 					<div class="row">
-						<div class="col-6 col-6-medium col-12-small">
+						<div class="col-4 col-4-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/peakdetection1.png" alt="" /></a>
 								<h3><a href="#">Peak Detection</a></h3>
 								<p>Time Series analysis examines a series of data points over a period time. In this study, we examine data from 2016-2022. The figure above highlights the peaks observed in our data.</p>
 							</article>
 						</div>
-						<div class="col-6 col-6-medium col-12-small">
+						<div class="col-4 col-4-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/changepdetection.png" alt="" /></a>
 								<h3><a href="#">Change Point Detection</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
-						<div class="col-6 col-6-medium col-12-small">
+						<div class="col-4 col-4-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/linearregression.png" alt="" /></a>
 								<h3><a href="#">Linear Regression</a></h3>
@@ -293,27 +293,27 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 			</article>
 
 		<!-- Team -->
-			<article id="team" class="wrapper style4">
-				<div class="container medium">
+			<article id="team" class="wrapper style3">
+				<div class="container">
 					<header>
 						<h2>We'd like to hear from you.</h2>
 						<p>You can add more information about the team members here.</p>
 						<div class="row">
-							<div class="col-6 col-6-medium col-12-small">
+							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
 									<a href="#" class="image featured"><img src="images/peakdetection1.png" alt="" /></a>
 									<h3><a href="#">Peak Detection</a></h3>
 									<p>Time Series analysis examines a series of data points over a period time. In this study, we examine data from 2016-2022. The figure above highlights the peaks observed in our data.</p>
 								</article>
 							</div>
-							<div class="col-6 col-6-medium col-12-small">
+							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
 									<a href="#" class="image featured"><img src="images/changepdetection.png" alt="" /></a>
 									<h3><a href="#">Change Point Detection</a></h3>
 									<p>Ornare nulla proin odio consequat.</p>
 								</article>
 							</div>
-							<div class="col-6 col-6-medium col-12-small">
+							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
 									<a href="#" class="image featured"><img src="images/linearregression.png" alt="" /></a>
 									<h3><a href="#">Linear Regression</a></h3>
