--- a/index.html
+++ b/index.html
@@ -270,7 +270,9 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/changepdetection.png" alt="" /></a>
 								<h3><a href="#">Change Point Detection</a></h3>
-								<p>According to our findings, there is a significant peak in number of tweets around 2021-02, 2022-02, and 2022-06. Furthermore, a change point is observed in the Change Points plot. We took note of the dates within each timeframe.</p>
+								<p>According to our findings, there is a significant peak in number of tweets around 2021-02, 2022-02, and 2022-06. Furthermore, a change point is observed in the Change Points plot. We took note of the dates within each timeframe.<br />
+								<br />
+								Based on our research and observations, these dates are relevant to significant events that relate to our research question. The observable events from the dates are the following:</p>
 							</article>
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
