--- a/index.html
+++ b/index.html
@@ -282,6 +282,12 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 								<p>The graph above shows the result of our segmented linear regression with respect to the number of tweets. The data is segmented for actual tweets regarding EDSA misinformation (1) before Bongbong Marcos declared his candidacy (blue scatter plots) and the (2) time period after announcing his candidacy up to the day of the election (purple scatter plots). LR1 is the predicted linear regression for time period 1 and LR2 is the predicted linear regression for time period 2.<br />
 								 <br />
 								The statistical model used is t-test between the linear predictor values to test for a significant change in the number of tweets between the said period. T-test is also used on the mean number of tweets on the said periods to test whether there is a significant rise to the tweets. Both of these tests saw a significant rise on the number of tweets between time periods.</p>
+								<ol>
+									<li> Bongbong Marcos declared his candidacy for president[1]: In October 2021, Bongbong Marcos filed his candidacy for the Philippine presidency in 2022. This sparked controversy among the public as can be seen on various social media platforms. This prompted mention of the EDSA Revolution among Twitter users. </li>
+									<li> EDSA Revolution Anniversary: In commemoration of the historical event, the People Power Revolution is celebrated as a holiday every year. Therefore, it resurfaces every February in remembrance. Our findings show that it garnered the most engagement in 2021 and 2022. </li>
+									<li>  The 2022 campaign period[2]: The presidential election took place on May 9, 2022, but the campaign began three months prior, in February 2022. Social media was used to resurface issues, including the EDSA Revolution, during the campaign to support the people's preferred candidates. As a result, more tweets were posted during this time period. </li>
+									<li> Premiere of 'Maid In Malacañang'[3]: In July 2022, Daryll Yap announced that his film 'Maid in Malacañang' would premiere in August 2022. The announcement received a generally negative response, with certain scenes spurring controversy over misrepresentations of history. Meanwhile, it was promoted in Twitter by a number of people who supported the film. </li>
+								</ol>
 							</article>
 						</div>
 					</div>
