--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/peakdetection1.png" alt="" /></a>
-									<h3><a href="#">Peak Detection</a></h3>
-									<p>Time Series analysis examines a series of data points over a period time. In this study, we examine data from 2016-2022. The figure above highlights the peaks observed in our data.</p>
+									<a href="#" class="image featured"><img src="images/kc.jpg" alt="" /></a>
+									<h3><a href="#">Kristina Castaneda</a></h3>
+									<p>Hello! I'm Kristina. I am a 2nd-year student in the University of the Philippines, Diliman, actively working towards earning a Bachelor's degree in Computer Science. Through this Data Science course handled by Professor Paul Regonia, I hope to enhance my skills in machine learning methods while being able to contribute to society by showing the influence of the rampant spread of EDSA Revolution misinformation around Philippine Twitter.</p>
 								</article>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
