--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 				<div class="container">
 					<header>
 						<h2>We'd like to hear from you.</h2>
-						<p>You can add more information about the team members here.</p>
+						<p>OUR GROUP MEMBERS</p>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
