--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="1680768360704.png" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/1680768360704.png" alt="" /></a>
 									<h3><a href="#">Loridge Gacho</a></h3>
 									<p>Hi, I'm Loridge Gacho.<br />
 									 <br />
