--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 						</div>
 					</div>
 					<footer>
-						<a href="#data" class="button large scrolly">Let's take a look at our data</a>
+						<a href="#methods" class="button large scrolly">Let's take a look at our data</a>
 					</footer>
 				</div>
 			</article>
