--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 				<div class="container">
 					<header>
 						<h2>Here's what we found out.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<p>We applied statistical methods and machine learning methods applicable to time series analysis in order to help us explore the data. This includes peak detection, change point detection and linear regression.</p>
 					</header>
 					<div class="row">
 						<div class="col-12 col-6-medium col-12-small">
