--- a/index.html
+++ b/index.html
@@ -284,9 +284,7 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/segmentedlr.png" alt="" /></a>
 								<h3><a href="#">Linear Regression</a></h3>
-								<p>The graph above shows the result of our segmented linear regression with respect to the number of tweets. The data is segmented for actual tweets regarding EDSA misinformation (1) before Bongbong Marcos declared his candidacy (blue scatter plots) and the (2) time period after announcing his candidacy up to the day of the election (purple scatter plots). LR1 is the predicted linear regression for time period 1 and LR2 is the predicted linear regression for time period 2.<br />
-								 <br />
-								The statistical model used is t-test between the linear predictor values to test for a significant change in the number of tweets between the said period. T-test is also used on the mean number of tweets on the said periods to test whether there is a significant rise to the tweets. Both of these tests saw a significant rise on the number of tweets between time periods.</p>
+								<p>lorem ipsum</p>
 							</article>
 						</div>
 					</div>
