--- a/index.html
+++ b/index.html
@@ -321,9 +321,7 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 								<article class="box style2">
 									<a href="#" class="image featured"><img src="images/1680768360704.png" alt="" /></a>
 									<h3><a href="#">Loridge Gacho</a></h3>
-									<p>Hi, I'm Loridge Gacho.<br />
-									 <br />
-									The statistical model used is t-test between the linear predictor values to test for a significant change in the number of tweets between the said period. T-test is also used on the mean number of tweets on the said periods to test whether there is a significant rise to the tweets. Both of these tests saw a significant rise on the number of tweets between time periods.</p>
+									<p>Hello! My name is LA, and I'm a second-year student at the University of the Philippines, Diliman. I'm a current undergraduate student in the BS Computer Science program. This study has contributed in improving my machine learning skills and I look forward to learning more in the future. In addition to working with data, I want to improve my web programming abilities. I aspire to be able to contribute to society by working on projects that fight disinformation utilizing the skills I am developing.</p>
 								</article>
 							</div>
 						</div>
