--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/changepdetection.png" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/Vincent.png" alt="" /></a>
 									<h3><a href="#">Vincent Dispo</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<p>Hello! I'm Vincent. I am a 2nd-year standing BS Computer Science student in the University of the Philippines Diliman. I have a great interest in learning about software programming and also web development. This study made me learn many things about Data Science, especially in the process of data preprocessing, presentation, data modeling and more.I want to be able to help the community through means related to my field like making software to help people, and doing studies like this that expose the rampand spread of misinformation in our social media platforms.</p>
 								</article>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
