--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/kc.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/Kristina.jpg" alt="" /></a>
 									<h3><a href="#">Kristina Castaneda</a></h3>
 									<p>Hello! I'm Kristina. I am a 2nd-year student in the University of the Philippines, Diliman, actively working towards earning a Bachelor's degree in Computer Science. Through this Data Science course handled by Professor Paul Regonia, I hope to enhance my skills in machine learning methods while being able to contribute to society by showing the influence of the rampant spread of EDSA Revolution misinformation around Philippine Twitter.</p>
 								</article>
@@ -319,7 +319,7 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/1680768360704.png" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/Loridge.png" alt="" /></a>
 									<h3><a href="#">Loridge Gacho</a></h3>
 									<p>Hello! My name is LA, and I'm a second-year student at the University of the Philippines, Diliman. I'm a current undergraduate student in the BS Computer Science program. This study has contributed in improving my machine learning skills and I look forward to learning more in the future. In addition to working with data, I want to improve my web programming abilities. I aspire to be able to contribute to society by working on projects that fight disinformation utilizing the skills I am developing.</p>
 								</article>
