--- a/index.html
+++ b/index.html
@@ -260,15 +260,15 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 					<div class="row">
 						<div class="col-12 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/peakdetection1.png" alt="" /></a>
-								<h3><a href="#">Peak Detection</a></h3>
+								<a class="image featured"><img src="images/peakdetection1.png" alt="" /></a>
+								<h3><a>Peak Detection</a></h3>
 								<p>Time Series analysis examines a series of data points over a period time. In this study, we examine data from 2016-2022. The figure above highlights the peaks observed in our data.</p>
 							</article>
 						</div>
 						<div class="col-12 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/changepdetection.png" alt="" /></a>
-								<h3><a href="#">Change Point Detection</a></h3>
+								<a class="image featured"><img src="images/changepdetection.png" alt="" /></a>
+								<h3><a>Change Point Detection</a></h3>
 								<p>According to our findings, there is a significant peak in number of tweets around 2021-02, 2022-02, and 2022-06. Furthermore, a change point is observed in the Change Points plot. We took note of the dates within each timeframe.<br />
 								<br />
 								Based on our research and observations, these dates are relevant to significant events that relate to our research question. The observable events from the dates are the following:</p>
@@ -282,15 +282,24 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 						</div>
 						<div class="col-12 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/segmentedlr.png" alt="" /></a>
-								<h3><a href="#">Linear Regression</a></h3>
-								<p>lorem ipsum</p>
+								<a class="image featured"><img src="images/segmentedlr.png" alt="" /></a>
+								<h3><a>Linear Regression</a></h3>
+								<p>The graph above shows the result of our segmented linear regression with respect to the number of tweets. The data is segmented for actual tweets regarding EDSA misinformation (1) before Bongbong Marcos declared his candidacy (blue scatter plots) and the (2) time period after announcing his candidacy up to the day of the election (green scatter plots). Segmented Regression 1 is the predicted linear regression for time period 1 and Segmented Regression 2 is the predicted linear regression for time period 2.<br/>
+
+The statistical model used is t-test between the slope values of the linear predictors for the two time periods to test for a significant change in the number of tweets between the said period. T-test is also used on the mean number of tweets on the said periods to test whether there is a significant rise to the tweets. The t-test returned a p-value of 0.0138, and with a significance level of 0.05, we accept the hypothesis.</p>
+							</article>
+						</div>
+						<div class="col-12 col-6-medium col-12-small">
+							<article class="box style2">
+								<h3><a>Conclusion</a></h3>
+								<p>Based on the findings, we accept our hypothesis given that the 2022 election and campaign period is among the events with a significant rise in EDSA Revolution dis/misinformation. This implies that the EDSA Revolution resurfaced in social media, particularly Twitter, during the 2022 election and provoked the controversy as a result of people spreading false information about the historical event to favor their candidate.</p>
 							</article>
 						</div>
 					</div>
 					<footer>
-						<p>Want to learn more? Take a look at our source codes.</p>
-						<a href="#contact" class="button large scrolly">Github Repo</a>
+						<p>Want to learn more? These are our codes for Data Modeling and Statistical Analysis.</p>
+						<script src="https://gist.github.com/VDispo/35e85c7d1d54e45a46995a9618d88a8c.js"></script>
+						<a href="https://github.com/VDispo/CS-132-Project" class="button large scrolly">Github Repo</a>
 					</footer>
 				</div>
 			</article>
@@ -299,28 +308,28 @@ In order to gather tweets on the subject, we looked into the topic of "EDSA revo
 			<article id="team" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>We'd like to hear from you.</h2>
-						<p>OUR GROUP MEMBERS</p>
+						<h2>Behind the study</h2>
+						<p>Group Members</p>
 						<br />
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/Kristina.jpg" alt="" /></a>
-									<h3><a href="#">Kristina Castaneda</a></h3>
+									<a class="image featured"><img src="images/Kristina.jpg" alt="" /></a>
+									<h3><a>Kristina Castaneda</a></h3>
 									<p>Hello! I'm Kristina. I am a 2nd-year student in the University of the Philippines, Diliman, actively working towards earning a Bachelor's degree in Computer Science. Through this Data Science course handled by Professor Paul Regonia, I hope to enhance my skills in machine learning methods while being able to contribute to society by showing the influence of the rampant spread of EDSA Revolution misinformation around Philippine Twitter.</p>
 								</article>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/Vincent.png" alt="" /></a>
-									<h3><a href="#">Vincent Dispo</a></h3>
+									<a class="image featured"><img src="images/Vincent.png" alt="" /></a>
+									<h3><a>Vincent Dispo</a></h3>
 									<p>Hello! I'm Vincent. I am a 2nd-year standing BS Computer Science student in the University of the Philippines Diliman. I have a great interest in learning about software programming and also web development. This study made me learn many things about Data Science, especially in the process of data preprocessing, presentation, data modeling and more.I want to be able to help the community through means related to my field like making software to help people, and doing studies like this that expose the rampand spread of misinformation in our social media platforms.</p>
 								</article>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/Loridge.png" alt="" /></a>
-									<h3><a href="#">Loridge Gacho</a></h3>
+									<a class="image featured"><img src="images/Loridge.png" alt="" /></a>
+									<h3><a>Loridge Gacho</a></h3>
 									<p>Hello! My name is LA, and I'm a second-year student at the University of the Philippines, Diliman. I'm a current undergraduate student in the BS Computer Science program. This study has contributed in improving my machine learning skills and I look forward to learning more in the future. In addition to working with data, I want to improve my web programming abilities. I aspire to be able to contribute to society by working on projects that fight disinformation utilizing the skills I am developing.</p>
 								</article>
 							</div>
